# linefeed

./: LICENSE.txt  config.yaml  print.json  pyproject.toml
.github/: copilot-instructions.md
src/linefeed/: api.py  api_config.py  app.py  config_manager.py  device_config.py  format_config.py  formatter.py  print_command.py  print_handler.py  print_segment.py
