[tool.poetry]
name = "linefeed"
version = "0.1.0"
description = ""
authors = ["Eric Souder <eric@souder.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.9"
fastapi = {extras = ["standard"], version = "^0.116.2"}


[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
